# CV_project

./: README.md
Final_project/: CMakeLists.txt  cascade.xml
Final_project/model_1000/: vocabulary.yml
Final_project/src/: cascade.cpp  cascade.h  hog.cpp  hog.h  main.cpp  object_recognition.cpp  object_recognition.h  search.cpp  search.h
